<resources>
    <string name="app_name">QuizApp</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome,</string>
    <string name="about_version">Version</string>
    <string name="about_year">Year</string>
    <string name="about_ratingBar">Rating</string>
    <string name="about_names">Tanase Andrei, Andrei Paltineanu</string>
    <string name="about_name">Quiz App</string>
    <string name="about_version_number">1.0</string>
    <string name="about_year_date">2018</string>
    <string name="about_button">About</string>
    <string name="pct_obt">Puncte acumulate:</string>
    <string name="student_list">STUDENT LIST</string>
    <string name="insert_question">Insert Question</string>
    <string name="add_answer">Add Answer</string>
    <string name="multiple_correct">Multiple correct?</string>
    <string name="insert_answer">Insert Answer</string>
    <string name="correct_answer">Correct Answer</string>
</resources>
