<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/about_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="238dp"
        android:text="@string/about_names" />

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_application"
        android:layout_alignStart="@+id/about_application"
        android:layout_marginStart="55dp"
        android:layout_marginTop="-230dp"
        android:text="@string/about_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/about_version"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/about_year"
        android:textSize="18sp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="33dp" />

    <TextView
        android:id="@+id/ratingBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="39dp"
        android:hint="@string/about_ratingBar"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/about_version_number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_year"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/about_year_date" />

</RelativeLayout>