<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="75dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:text="@string/about_button" />

    <TextView
        android:id="@+id/quote_zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="57dp"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="23dp"
        android:text="TextView" />

</RelativeLayout>